# foreach

./: CMakeLists.txt  ChangeLog  README  README.md
.svn/: entries
.svn/text-base/: AUTHORS.svn-base  Makefile.in.svn-base  README.svn-base  configure.ac.svn-base  configure.svn-base
doc/: my_system.cpp
src/: foreach.cpp  subst.cpp  subst.h
src/.deps/: foreach-foreach.Po  foreach-subst.Po
src/.svn/: entries
src/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  foreach.cpp.svn-base
